[package]
name = "pi_wheel"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "Multilayer timing wheel of constant generics"
repository = "https://github.com/GaiaWorld/pi_wheel.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "wheel", "timer", "pi_wheel"]

